# sphinxcontrib-xlink

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/sphinxcontrib/xlink/: __init__.py  directives.py  roles.py
src/sphinxcontrib/xlink/static/: xlink.css
tests/: conftest.py  test_xlink.py
tests/roots/test-basic/: conf.py  index.rst
tests/roots/test-basic/xlinks/: example1.xlink  example2.xlink  protocols.xlink
