[project]
name = "sphinxcontrib-xlink"
version = "1.1.0"
description = "A Sphinx extension for external link management via .xlink files."
readme = "README.md"
authors = [{name = "Jens Frey", email = "jens.frey@coffeecrew.org"}]
license = {file = "LICENSE"}
dependencies = ["sphinx>=5.0"]
classifiers = [
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/authsec/sphinxcontrib-xlink"
Documentation = "https://github.com/authsec/sphinxcontrib-xlink#readme"
Repository = "https://github.com/authsec/sphinxcontrib-xlink.git"
Issues = "https://github.com/authsec/sphinxcontrib-xlink/issues"
Changelog = "https://github.com/authsec/sphinxcontrib-xlink/releases"

[project.optional-dependencies]
test = [
    "pytest",
    "beautifulsoup4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sphinxcontrib*"]

[tool.setuptools.package-data]
"sphinxcontrib.xlink" = ["static/*.css"]